# cli-info

./: README.md  info.py  pyproject.toml
cli_info/: runner.py
cli_tools_info/: __init__.py  runner.py  utils.py  versions.py
