[tool.poetry]
name = "cli-tools-info"
version = "1.0.5"
description = ""
authors = ["Erik Lilja <erik@rkllj.io>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
